    format. If no format is specified, it lists legal formats.
 - Added multilang support to output/core_xml
 - Added method $eprint->render_export_links which returns a <ul>
    of all things an eprint an eprint can be output as.
 - Moved text for export-search results and cgi/export to phrases
    file.
 - export-results now offers only output modes for the current 
    dataset.
 - New method $eprint->skip_validation which returns false unless
    the config option skip_validation is defined, in which case
    it is called as a function pointer and returns true if the
    eprint should _not_ be validated.
 - Added skip_validation test to all eprint & document validation
    routines.
 - Added commented-out skip_validation stub to the default 
    ArchiveConfig.pm
 - Made changes to tech_docs and makepackage to reflect new paths
    in eprint.org website.
 - Fixed bug in install.pl.in which did a numerical compare when it
    should have been string compare.
 - Added plugins directory to the installer.
 
2005-09-20 cjg

 - Fixed typo in install.pl.in "eq" should have been "ne"

2005-09-21 tmb

 - Applied patch to core_bibtex to add grave characters.

2005-09-23 cjg

 - Added /testdata/ directory. This contains a script to load test
    data into a repository, and the files containing that data.
 - Documented many methods in EPrints::Session

2005-09-26 cjg

 - Added new config option "match_start_of_name". This allows name
    searching to work more like it did in version 2.2
 - Added new type of search condition: "index_start". This matches
    search keys which start with the given value.

2005-11-11 cjg

 - Removed OAI1.1 config
 - Added DIDL OAI config 
 - Made the authentication username case insensitive so far as the
    change user feature is concerned.
 - Removed some pointless lines of code from SearchField->from_form
 - added "use bytes" to XML.pm - this solves some of the problems
    encountered with XML::DOM with unicode chars.
