@@ -1,7 +1,0 @@
-
-EPrints::Plugins::register( 
-	id => "output/xml",
-	parent => "output/core_xml",
-	visible => 'all',
-);
-
